<resources>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="login_des">Enter your correct credentials to continue.</string>
    <string name="login">Login</string>
    <string name="username">Enter your ID No./User name</string>
    <string name="version">County Revenue System App</string>
    <string name="password">Password</string>
    <string name="search">Search..</string>
    <string name="search_des">search for transaction</string>
    <string name="name">Name</string>
    <string name="px">AL</string>
    <string name="county">County Government</string>
    <string name="enforcement">Enforcement</string>
    <string name="collections">My Collections Overview</string>
    <string name="overview">Here is an Overview Sub County</string>
    <string name="my_assigned">My Assigned Revenue Officials</string>
    <string name="receipt_query">Query By Receipt Number</string>
    <string name="business_query">Query By Business ID</string>
    <string name="vehicle_query">Query By Number Plate</string>
    <string name="cess_query">Query By Number Plate</string>
    <string name="business">Check SBP Validity</string>
    <string name="cess">Cess</string>
    <string name="markets">Market Fees</string>
    <string name="receipt_inspection">Receipt inspection</string>
    <string name="invoices">Search Invoice(Print)</string>
    <string name="invoices_des">View invoice details and issue print</string>
    <string name="plate_verification">No. Plate Verification</string>
    <string name="plate_verification_des">Verify compliance for parking,Cess, bus station taxes etc..</string>
    <string name="receipt_inspection_des">Check for valid receipt and enforce compliance.</string>
    <string name="cess_des">Drivers pay for materials like ballast, sand etc ...</string>
    <string name="parking">Matatu Parking</string>
    <string name="offstreet">Street Parking</string>
    <string name="verify_vehicle">Scan Vehicle</string>
    <string name="verified">verified</string>
    <string name="verify_payment">Verify Payment</string>
    <string name="parking_">Parking/Motorbikes</string>
    <string name="street">Street Parking</string>
    <string name="street_des">Parking Charges for motorbikes, personal vehicles and more.</string>
    <string name="document_verification">Document Verification</string>
    <string name="document_verification_des">Validate county documents such as receipts, permits, stickers etc</string>
    <string name="violation">Violation Reporting</string>
    <string name="metered">Metered/off StreetParking</string>
    <string name="history">My History</string>
    <string name="history_">History</string>
    <string name="profile">My Profile</string>
    <string name="query_title">Query by receipt Number</string>
    <string name="query_des">Enter the receipt number below</string>
    <string name="back">Back</string>
    <string name="receipt_details">Receipt Details</string>
    <string name="receipt_no">Receipt No</string>
    <string name="income_type">Income type</string>
    <string name="market_income_type">Market Income Type</string>
    <string name="cess_income_type">Cess Income Type</string>
    <string name="offence_category">Offence</string>
    <string name="offence_sub_category">Offence Charges</string>
    <string name="market_fees">Markets</string>
    <string name="market_fees_des">Taxes for vendors on items sold at our markets.</string>
    <string name="billing_date">Billing Date</string>
    <string name="billing_date_">10 Oct 2021 11:22 PM</string>
    <string name="payment_date">Payment date</string>
    <string name="payment_date_">25 Oct 2021 10:02 PM</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_status_">Paid</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="bill_amount_">KES 2,000.00</string>
    <string name="receipt_amount">Receipt Amount</string>
    <string name="receipt_amount_">KES 2,000.00</string>
    <string name="outstanding_balance">Outstanding Balance</string>
    <string name="outstanding_balance_">KES 0.00</string>
    <string name="paid_fully">Fully Paid</string>
    <string name="business_certificate">Certificate details</string>
    <string name="business_id">Business Id 888S88S</string>
    <string name="business_name">Business Name</string>
    <string name="business_community">Kavakali Business Community</string>
    <string name="pin">KRA Pin</string>
    <string name="pin_">3123czcz13</string>
    <string name="owner">Owner</string>
    <string name="owner_">312584788,23695874,25639596</string>
    <string name="business_activity">Business Activity Code &amp; Description</string>
    <string name="informal_sector">695 - Informal Sector</string>
    <string name="detailed_activity">Detailed Activity Description</string>
    <string name="detailed_activity_">Hawker: 1 Person with motor vehicle</string>
    <string name="box">PO BOX</string>
    <string name="box_">3692 Kakamega</string>
    <string name="plot">Plot NO.</string>
    <string name="plot_">BL300/398</string>
    <string name="owner_details">Owner Details</string>
    <string name="plot_details">Plot Details</string>
    <string name="physical_address">Physical address</string>
    <string name="physical_address_">Park Hill next to Maisha Market</string>
    <string name="certificate_status">Certificate Status</string>
    <string name="active">Active</string>
    <string name="gps">GPS Coordinates</string>
    <string name="plot_size">Plot Size</string>
    <string name="annual_rate">Annual Rate</string>
    <string name="out_standing">Outstanding Bal</string>
    <string name="parking_details">Parking Details</string>
    <string name="parking_details_">Car plate No KAD 125P</string>
    <string name="parking_duration">Parking duration</string>
    <string name="parking_duration_">Daily Parking</string>
    <string name="vehicle_category">Vehicle category</string>
    <string name="vehicle_category_">Personal Vehicle</string>
    <string name="parking_fee">Parking fee</string>
    <string name="parking_fee_">KES 200.00</string>
    <string name="parking_penalty">Parking Penalty</string>
    <string name="parking_penalty_">KES 0.00</string>
    <string name="total_charges">Total Charges</string>
    <string name="total_charges_">KES 200.00</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="vehicle">Vehicle</string>
    <string name="location">Location</string>
    <string name="time_elapsed">Elapsed Time</string>
    <string name="amount_paid_">KES 200</string>
    <string name="zone">Zone</string>
    <string name="zone_">Butere</string>
    <string name="paid">Paid</string>
    <string name="paid_by">Paid By</string>
    <string name="clamp_vehicle">CLAMP VEHICLE</string>
    <string name="clamp_vehicle_">Enter reason for clamping the vehicle.</string>
    <string name="clamp">Initiate Clamping</string>
    <string name="close">CLOSE</string>
    <string name="cess_details">Cess Details</string>
    <string name="cess_details_">Car plate No KAD 125P</string>
    <string name="cess_items">Cess Items</string>
    <string name="cess_items_">Beetroot per bag</string>
    <string name="cess_area">Cess area</string>
    <string name="cess_area_">Kigaja town</string>
    <string name="unit_price">Unit price</string>
    <string name="unit_price_">150 per Bag</string>
    <string name="quantity">Quantity</string>
    <string name="instances">Number Of Days/Instances</string>
    <string name="details">Transaction Details</string>
    <string name="Offence_details">Offence Details</string>
    <string name="Offence_details_hint">Enter Offence Details</string>
    <string name="details_hint">Enter more details e.g item description</string>
    <string name="details_hint_">Enter more details e.g Meru to Isiolo</string>
    <string name="quantity_">50 Bags</string>
    <string name="total">Total</string>
    <string name="total_">kes 7,500</string>
    <string name="business_permit">Business Permit</string>
    <string name="receipt">Receipt</string>
    <string name="cess_">Cess</string>
    <string name="all_queries">All Queries</string>
    <string name="to_be_clamped">To be clamped</string>
    <string name="to_be_un_clamped">To Be Unclamped</string>
    <string name="non_compliant">Non Compliant</string>
    <string name="clamped">Clamped</string>
    <string name="compliant">Compliant</string>
    <string name="receipt_query_">Receipt Query</string>
    <string name="businesses">Businesses</string>
    <string name="valid_licences">Valid licences</string>
    <string name="invalid_licences">Invalid licences</string>
    <string name="valid">Valid</string>
    <string name="invalid">Invalid</string>
    <string name="change_password">Change Password</string>
    <string name="chargeable"> Chargeable Items and Quantity Ranges</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot">Forgot your passwords?</string>
    <string name="click_here">Click Here</string>
    <string name="customer">Customer</string>
    <string name="select_scan">Select Document to Scan</string>
    <string name="scan_receipt">Scan a Receipt</string>
    <string name="scan_trade">Scan Trade License</string>
    <string name="scan_liquor">Scan Liquor License</string>
    <string name="start">Start Date</string>
    <string name="end">Expiry Date</string>
    <string name="town">Select town</string>
    <string name="reason">Select clamping reason</string>
    <string name="bill_no">Bill No</string>
    <string name="bill_total">Bill Total</string>
    <string name="reducing_balance">Reducing Balance</string>
    <string name="fee_description">Fee Description</string>
    <string name="account_desc">Account Desc</string>
    <string name="billing_status">Billing Status</string>
    <string name="padlockNumber">Padlock Number</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_desc">Enter the cutsomer\'s phone number to send the, a payment request for the above bill</string>
    <string name="mpesa_">Mpesa Phone Number</string>
    <string name="phone_number_hint">Enter phone Number i.e 07..</string>
    <string name="phone_number_hint_2">Enter second phone Number i.e 07..</string>
    <string name="send_payment">SEND PAYMENT REQUEST</string>
    <string name="business_information">Business information</string>
    <string name="certificate_of_incorporation">Certificate of incorporation</string>
    <string name="vat_number">VAT Number</string>
    <string name="postal">Postal Code</string>
    <string name="Postal_town">Postal town*</string>
    <string name="additional_business_information">Additional business information</string>
    <string name="sub_county">Sub County</string>
    <string name="ward">Ward</string>
    <string name="last_business_information">Last Business information</string>
    <string name="business_activity_description">Business Activity Description*</string>
    <string name="email">Email</string>
    <string name="my_account_">My Account</string>
    <string name="transactions">Transactions</string>
    <string name="revenue_agent">Revenue Agents Logs</string>
    <string name="transactions_break_down">Transactions Breakdown</string>
    <string name="total_county_collections">Total County Collections</string>
</resources>