<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".others.AddBusiness">

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".others.AddBusiness">

    <TextView
        android:textColor="@color/primay_color"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/business_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edbusinessName"
        android:hint="@string/business_name"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edCertificateOfIncorporation"
        android:hint="@string/certificate_of_incorporation"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edPin"
        android:hint="@string/pin"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edVatNumber"
        android:hint="@string/vat_number"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edBox"
        android:hint="@string/box"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <EditText
            android:inputType="number"
            android:lines="1"
            android:textSize="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/edPostal"
            android:hint="@string/postal"
            android:padding="10dp"
            android:background="@drawable/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edPostalTown"
        android:hint="@string/Postal_town"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/primay_color"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/additional_business_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edPlotNumber"
        android:hint="@string/plot"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edPhysicalAddress"
        android:hint="@string/physical_address"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:inputType="phone"
        android:lines="1"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/edPhoneNuumber"
        android:hint="@string/phone_number_hint"
        android:padding="10dp"
        android:background="@drawable/rectangle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <EditText
            android:inputType="phone"
            android:lines="1"
            android:textSize="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/edPhoneNumber2"
            android:hint="@string/phone_number_hint_2"
            android:padding="10dp"
            android:background="@drawable/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textSize="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/edEmail"
            android:hint="@string/email"
            android:padding="10dp"
            android:background="@drawable/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/sub_county"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:layout_marginStart="10sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:elevation="5dp"
                android:id="@+id/spinnerSubCounty"
                android:layout_width="match_parent"
                android:layout_height="50sp" />


        </LinearLayout>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/ward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:layout_marginStart="10sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:elevation="5dp"
                android:id="@+id/spinnerWard"
                android:layout_width="match_parent"
                android:layout_height="50sp" />


        </LinearLayout>

        <TextView
            android:textColor="@color/primay_color"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/last_business_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/business_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:layout_marginStart="10sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:elevation="5dp"
                android:id="@+id/spinnerBusinessActivity"
                android:layout_width="match_parent"
                android:layout_height="50sp" />


        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/business_activity_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rectangle_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:layout_marginStart="10sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:elevation="5dp"
                android:id="@+id/spinnerBusinessActivityDescription"
                android:layout_width="match_parent"
                android:layout_height="50sp" />


        </LinearLayout>

        <FrameLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="left"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:text="@string/total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvAmount"
                android:gravity="center"
                android:layout_gravity="right"
                tools:text="@string/bill_amount_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textStyle="italic"
                android:textSize="10sp"
                android:text="@string/payment_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="15sp"
                android:textColor="@color/primay_color"
                android:textStyle="bold"
                tools:text="Waiting for Payments..."
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:layout_marginTop="20sp"
                android:text="@string/mpesa_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <EditText
                android:inputType="phone"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20dp"
                android:id="@+id/edPhoneNumber"
                android:hint="@string/mpesa_"
                android:padding="15dp"
                android:background="@drawable/bg_fill_gay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvSendPayment"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/indicator_state_background_button"
                android:textColor="@drawable/indicator_state_color_button"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/send_payment"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                />


        </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>